======================================================================
Version 0.17.0, by Aleksey Cheusov, Tue, 22 Jun 2010 19:24:07 +0300

  mkc_imp.pkg-config.mk:
    - FIXED: double applying -L, -l and -I options got from pkg-config.
      Solution: .unset PKG_CONFIG_DEPS

  CC_TYPE, CXX_TYPE and LD_TYPE variables are a part of mk-c's API,
  now they are documented.

  mkcmake:
    - MKC_BMAKE environment variable is introduced. See mkcmake.1

  Documentation for /etc/mk.conf, @sysconfdir@/mk.conf and MAKECONF.

  doc/presentation.pdf: New slides and updates

  FAQ: updates

  mkc_imp.lua.mk:
    - Check for lua.h header if other checks succeeded.

  mkc_imp.lib.mk:
    - MKDLL is also case-insensitive.

  Makefile:
    - make shipped with NetBSD-5 does not have option -C,
      so I remove it.

======================================================================
Version 0.16.0, by Aleksey Cheusov, Sat, 12 Jun 2010 15:06:10 +0300

  Support for Lua programming language. See documentation for
  mkc_imp.lua.mk in mk-configure(7).

  mkc.pkg-config.mk:
    - Significant improvements! For details see
      mk-configure(7) manual page and examples/hello_glib2 example.
      New supported variables: PKG_CONFIG.exists.<lib>, PKG_CONFIG_VARS.<lib>
      and PKG_CONFIG.var.<lib>.<var>.
    - becomes internal include file and therefore
      renamed to mkc_imp.pkg-config.mk.  Symlink mkc.pkg-config.mk is
      provided for backward compatibility.  mkc_imp.pkg-config.mk is
      included by mkc.prog.mk and mkc.lib.mk.

  mkc.intexts.mk:
    - becomes internal include file and therefore
      renamed to mkc_imp.intexts.mk.
      Symlink mkc.intexts.mk is provided for backward compatibility.
      It is included from mkc.prog.mk, mkc.lib.mk and mkc.files.mk.
    - New variable INTEXTS_REPLS. See mk-configure(7).

  mkc.lib.mk:
    - includes mkc_imp.intexts.mk
    - supports SCRIPTS* variables (includes newly created mkc_imp.scripts.mk)