@@ -8,9 +8,6 @@ Plan 1)
   = README/INSTALL
     - section REQUIREMENTS (mkdep, pkg-config, ar, tar, gzip, bzip2...)
 
-  = mkc_imp.lua.mk
-    INSTALL_LMOD and INSTALL_CMOD must not be empty!
-
   = mkc.subprj.mk, mkc.subdir.mk and MKCCACHEDIR
 
   = support for POD?
@@ -77,6 +74,8 @@ Plan2)
   = man page for mkc_check_compiler
 
   = MKPIE for building Position Independent Executables
+
+  = mkc_imp.lib.mk: list of exported symbols
 
   = mkc.subdir.mk:
     - continue bulding even if some subprojects failed
