@@ -1,1 +1,1 @@
-ERROR: We need mk-configure v.999.0.0 while 0.16.0 is detected
+ERROR: We need mk-configure v.999.0.0 while 0.17.0 is detected
